testsuite/tests/typecheck/should_fail/tcfail147.hs
module Foo1 where

-- Variant: ill-kinded. 
class XClass a where
 xFun :: a -> XData
 
data XData = XCon XClass
